adult/logs/create_fluctuations_15091918_578.out
SLURM_JOBID:  15092499
SLURM_ARRAY_TASK_ID:  578
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 4, 0.0005, 40)


